--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>WELCOM TO MY CHANNEL</h1><br>
         <h2>PLEASE FILL THE COLUMN BELOW</h2><br><br><br>
         <div>
-            <form action="./Home.html" >
+            <form action="http://127.0.0.1:5500/Home.html?NAMA=" >
                 <label for="">NAMA</label><br>
                 <input type="text" name="NAMA" id=""><br>
                 <br><br>
